[gd_scene load_steps=8 format=3 uid="uid://exvde5hu78bw"]

[ext_resource type="Script" uid="uid://c32dcfjb0hfwb" path="res://src/draggable_body/draggable_body.gd" id="1_sikko"]
[ext_resource type="Script" uid="uid://5ouaqoqmhfiu" path="res://src/drag_interaction/drag_interaction.gd" id="3_w6aiq"]
[ext_resource type="Texture2D" uid="uid://2qb1qs6h08t" path="res://ast/textures/input/mouse_left_outline.png" id="4_wyh1p"]

[sub_resource type="BoxShape3D" id="BoxShape3D_2uyx4"]

[sub_resource type="ViewportTexture" id="ViewportTexture_h6t77"]
viewport_path = NodePath("DragInteraction/UI/SubViewport")

[sub_resource type="BoxShape3D" id="BoxShape3D_h6t77"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jw7y1"]
size = Vector3(4, 4, 4)

[node name="DraggableBody" type="CharacterBody3D" node_paths=PackedStringArray("DragInteraction", "MouseTexture", "PlayerOutOfBoundsArea")]
collision_layer = 4
collision_mask = 6
script = ExtResource("1_sikko")
DragInteraction = NodePath("DragInteraction")
MouseTexture = NodePath("DragInteraction/UI/SubViewport/MouseTexture")
PlayerOutOfBoundsArea = NodePath("PlayerOutOfBoundsArea")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.364711, 0, 0, 0, 0.364711, 0, 0, 0, 0.364711, 0, 0, 0)
shape = SubResource("BoxShape3D_2uyx4")

[node name="DragInteraction" type="Node3D" parent="." node_paths=PackedStringArray("body_to_drag")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00167271, 0.0885893, 0.0119386)
script = ExtResource("3_w6aiq")
body_to_drag = NodePath("..")
drag_force = 70.0

[node name="UI" type="Sprite3D" parent="DragInteraction"]
transform = Transform3D(0.113, 0, 0, 0, 0.113, 0, 0, 0, 0.113, 0, 0, 0)
billboard = 1
no_depth_test = true
render_priority = 3
texture = SubResource("ViewportTexture_h6t77")

[node name="SubViewport" type="SubViewport" parent="DragInteraction/UI"]
transparent_bg = true

[node name="MouseTexture" type="TextureRect" parent="DragInteraction/UI/SubViewport"]
offset_left = 192.13
offset_top = 188.395
offset_right = 320.13
offset_bottom = 316.395
texture = ExtResource("4_wyh1p")

[node name="PlayerMimicRaycastArea" type="Area3D" parent="."]
collision_priority = 2.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerMimicRaycastArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0584564, 0.0288868, 0)
shape = SubResource("BoxShape3D_h6t77")

[node name="PlayerOutOfBoundsArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerOutOfBoundsArea"]
shape = SubResource("BoxShape3D_jw7y1")

[connection signal="area_entered" from="PlayerMimicRaycastArea" to="." method="_on_player_mimic_raycast_area_area_entered"]
[connection signal="area_exited" from="PlayerMimicRaycastArea" to="." method="_on_player_mimic_raycast_area_area_exited"]
[connection signal="body_exited" from="PlayerOutOfBoundsArea" to="." method="_on_player_out_of_bounds_area_body_exited"]
